--- a/app/src/main/res/layout/activity_rotation.xml
+++ b/app/src/main/res/layout/activity_rotation.xml
@@ -30,9 +30,10 @@
                 android:id="@+id/rotationImage"
                 style="@style/imagePreviewOnEffect"
                 android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
-                android:background="#E91E63"
+                android:src="@mipmap/ic_launcher"
                 android:contentDescription="@string/rotation_image_desc"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
