--- a/app/src/main/res/layout/activity_splines.xml
+++ b/app/src/main/res/layout/activity_splines.xml
@@ -15,11 +15,23 @@
         android:text="Сплайн"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.154"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/splinesView"
         app:layout_constraintVertical_bias="0.583"
         tools:ignore="HardcodedText" />
+
+    <Button
+        android:id="@+id/deletePoint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Удалить"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.836"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/splinesView"
+        app:layout_constraintVertical_bias="0.574" />
 
     <com.example.photoeditor.SplinesView
         android:id="@+id/splinesView"
@@ -32,4 +44,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ExtraText"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
